# rodeo

./: readme.md
rodeo-core/: Cargo.toml
rodeo-core/src/: main.rs
rodeo-core/src/methods/: backward_euler.rs  butcher.rs  forward_euler.rs  mod.rs
rodeo-core/src/problems/: ivp.rs  mod.rs
