[package]
name = "rodeo"
version = "0.1.0"
authors = ["Erik De Smedt <erikdesmedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra={version = "0.21", features= ["alga"]}
alga = "0.9"
typenum = "1.12"
